--- a/sunnyside-agency-landing-page-main/style.css
+++ b/sunnyside-agency-landing-page-main/style.css
@@ -5,6 +5,7 @@
     text-decoration: none;
     list-style: none;
     /* overflow-y: hidden; */
+
 }
 :root{
     /* Primary */
@@ -25,37 +26,33 @@
 --White: hsl(0, 0%, 100%);
 }
 body{
-    width: 100vw;
-    height: 100vh;
     overflow-x: hidden;
 }
 .header{
     object-fit:contain ;
-    width: 100%;
     height: 750px;
     background-image: url(./images/desktop/image-header.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
 }
+
 /* my imported navbar */
 nav{
     display: flex;
     justify-content: space-between;
     align-content: center;
     height: 80px;
-    width: 100%;
     padding: 30px 0px;
 }
 .my-logo{
     color: var(--White);
     font-weight:900;
-    font-size: 22px;
-    padding-left: 20px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1.5rem;
+    font-family: 'Barlow', sans-serif;
+
 }
-.my-nav{
-    width: 45%;
-    height: 100%;
+.navbar{
+    padding: 2rem;
 }
 .hamburger{ 
     display: none;
@@ -66,39 +63,47 @@ nav{
     border-radius: 5px;
     background-color: white;
     border: 2px solid white; 
-} 
+}
 .navbar-menu{
     display: flex;
-    justify-content: space-between;
-    width: 570px;
-    height: 100%;
-    align-content: center;
-     text-align: center;  
+    flex-direction: row;
+    gap: 2rem;
 }
-.menu-list{
-    height: 100%;
-    width: 25%;
-}
+
+
+
 .menu{
     display: block;
-    width: 100%;
-    height: 100%;
     text-decoration: none;
     color: white;
     text-align: center;
+    padding: 1rem;
+    font-size: 1.2rem;
+}
+.menu a{
+    text-decoration: none;
+    color: white;
+    font-family: 'Barlow', serif;
+
+} 
+.menu:last-child{
+    background-color:  white;  
+    text-transform: uppercase;
+    border-radius: 2rem;
 }
 
-.menu-list:hover a{
+.menu:last-child a{
+    color: black;
+    font-weight: 600;
+    letter-spacing: normal;
+}
+.menu:hover {
     cursor: pointer;
     color: white;
-    text-transform: uppercase;
-   background-color: rgb(159, 159, 255);
+   background-color:rgba(255, 255, 255, 0.389);
    border-radius: 30px;
-   width: 100%;
-   height: 100%;
-   transition: .1s;
+   transition: all .1s;
 }
-
 /* end */
 .box{
     display: flex;
@@ -118,6 +123,13 @@ nav{
     position: absolute;
     top: 150px;
 }
+.box1 h1{
+    font-size: 3.5rem;
+    font-weight: 700;
+    font-family: 'Fraunces', serif;
+
+}
+
 .arrow-box> .arrow{
  margin-top: 90px;
  width: 20px;
@@ -150,11 +162,15 @@ nav{
     flex-direction: column;
 }
 .details{
-    font-family: sans-serif;
-    font-size: 2em;
+    font-family: 'Fraunces', serif;
+font-weight: 400;
+ font-size: 2em;
     font-weight: bolder;
 }
-.para{
+.para{    font-family: 'Barlow', serif;
+    font-weight: 400;
+     font-size: 1.2rem;
+     letter-spacing: normal;
     color:rgb(124, 128, 127);
 }
 .lnk{
@@ -164,15 +180,16 @@ nav{
 }
 .learn{
     color: black;
-    font-size: 20px;
     font-weight: bolder;
-    font-family: serif;
+
+    font-family: 'Fraunces', serif;
+     font-size: 1.2rem;
 }
 .baseline.one{
  width: 150px;
  height: 8px;
  position: relative;
- bottom: 40px;
+ bottom: 30px;
  left: -7px;
  border-radius: 20px;
  z-index: -1;
@@ -183,7 +200,7 @@ nav{
     width: 150px;
     height: 8px;
     position: relative;
-    bottom: 35px;
+    bottom: 25px;
     left: -7px;
     border-radius: 20px;
     z-index: -1;
@@ -199,13 +216,18 @@ nav{
     text-align: center;
 }
 .image-on-text h4{
-    font-family: serif;
-    font-weight: 900;
-    font-size: 30px;
+    font-family: 'Fraunces', serif;
+    font-weight: 600;
+     font-size: 2em;
+     color: var(--Dark-desaturated-cyan);
     padding-bottom: 40px;
 }
 .image-on-text p{
     line-height:23px ;
+    color: var(--Very-dark-grayish-blue);
+    font-family: "Barlow", serif;
+    font-size: 1rem ;
+    font-weight: 500;
 }
 .box3{
     display: flex;
@@ -218,11 +240,13 @@ nav{
 }
 .box3 h4{
     text-align:center;
-    letter-spacing: 7px;
+    letter-spacing: 4px;
     text-transform:uppercase;
-    color:var(--Very-dark-grayish-blue) ;
-    font-family: serif;
-    font-weight: bolder;
+    color:var(--Grayish-blue) ;
+    font-family: 'Fraunces', serif;
+    font-weight: 700;
+     font-size: 1.5rem;
+     word-spacing: 8px;
 }
 .testimonial{
     display: flex;
@@ -244,9 +268,21 @@ nav{
  width: 300px; 
  height: 250px;
 }
+.attest p{
+    color: var(--Very-dark-grayish-blue);
+    font-size: 1rem;
+    font-weight: 600;
+      font-family: 'Barlow', serif;
+
+    
+}
 .identity{
     width: 100%;
     height: 50px;
+}
+.identity h2{
+    font-size: 1.3rem;
+    font-weight: 700; font-family: 'Fraunces', serif; 
 }
 .flex-image{
     height: 340px;
@@ -315,15 +351,12 @@ span a:hover{
     width: 25px;
     height: 25px;
 }
-.ikon{
-    color: none;
-    fill: none;
-}
- .ikon:hover{
-  color: white;
-   
-  background-color: wheat;
-}
+
+svg path:hover {
+    fill: #ffffff;
+    transition: all .5s;
+  }
+
 .attribution { 
     font-size: 11px; 
     text-align: center;
